# PacMan

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos.yml  standalone.yml  ubuntu.yml  windows.yml
documentation/: CMakeLists.txt
include/: application.h  config.h  deleters.h  entity.h  input.h  utils.h
include/audio/: manager.h
include/collision/: hitbox.h
include/input/: actions.h  input.h  keyboard.h
include/objects/: corner.h  ghost.h  level.h  pacman.h  points10.h  points50.h  ready.h  score.h  wall.h
include/render/: masterrenderer.h  textrenderer.h
include/state/: basestate.h  cutscenestate.h  deathstate.h  playingstate.h
scripts/: build.sh  clang-format.sh  doc.sh  test.sh
source/: application.cpp  utils.cpp
source/audio/: manager.cpp
source/collision/: hitbox.cpp
source/input/: keyboard.cpp
source/objects/: corner.cpp  ghost.cpp  level.cpp  pacman.cpp  points10.cpp  points50.cpp  ready.cpp  score.cpp  wall.cpp
source/render/: masterrenderer.cpp  textrenderer.cpp
source/state/: cutscenestate.cpp  deathstate.cpp  playingstate.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: application.cpp
test/source/collision/: hitbox.cpp
test/source/input/: keyboard.cpp
test/source/objects/: pacman.cpp
test/source/render/: masterrenderer.cpp
test/source/state/: cutscenestate.cpp  playingstate.cpp
